Bug 122714 - Re-expanding the titlebar menu of a floating toolbar needs a second click
Summary: Re-expanding the titlebar menu of a floating toolbar needs a second click
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:7.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Toolbars-Context-Menu
  Show dependency treegraph
 
Reported: 2019-01-14 20:24 UTC by Telesto
Modified: 2021-02-20 16:19 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screencast (168.51 KB, video/mp4)
2019-01-14 20:25 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2019-01-14 20:24:21 UTC
Description:
Re-expanding the shapes menu of floating window needs a second click 

Steps to Reproduce:
1. Make the shapes window floating
2. Click the arrow button 
3. Disable a item
4. Click the arrow again (nothing happens)
5. Click it for a second time -> working

Actual Results:
Additional click needed when opening the menu for a second time

Expected Results:
Shouldn't be


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.3.0.0.alpha0+
Build ID: 61778fd20395794d2de3b52d60dcc65083aecd93
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 1 Telesto 2019-01-14 20:25:03 UTC
Created attachment 148315 [details]
Screencast
Comment 2 Dieter 2019-01-14 20:30:12 UTC
(In reply to Telesto from comment #0)
> 1. Make the shapes window floating

How can I do this?
Comment 3 Telesto 2019-01-14 21:20:47 UTC
(In reply to Dieter Praas from comment #2)
> (In reply to Telesto from comment #0)
> > 1. Make the shapes window floating
> 
> How can I do this?

Click the basic shapes selector (so arrow down icon) & click the dotted line & drag it somewhere.. will make the dialog floating
Comment 4 Dieter 2019-01-15 15:03:03 UTC
I confirm it with

Version: 6.3.0.0.alpha0+ (x64)
Build ID: 411f3a050ac2be598019d512f8ccfe041080c28f
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-01-14_03:17:11
Locale: en-US (de_DE); UI-Language: en-US
Calc: threaded

but not with

Version: 6.1.4.2 (x64)
Build-ID: 9d0f32d1f0b509096fd65e0d4bec26ddd1938fd3
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE); Calc: group threaded
Comment 5 Xisco Faulí 2019-01-16 17:13:10 UTC
it can be reproduced with gen. Need to be bisected with bibisect-linux64-6.3
Comment 6 raal 2019-01-21 14:24:13 UTC
This seems to have begun at the below commit.
Adding Cc: to Maxim Monastirsky; Could you possibly take a look at this one? Thanks
 5ac28cb9065de1ea083a450fbbfdeacbcb6001fa is the first bad commit
commit 5ac28cb9065de1ea083a450fbbfdeacbcb6001fa
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Wed Jun 13 16:13:52 2018 -0700

    source c3e552ac25be001a623469c549ee8d0719b98133
authorMaxim Monastirsky <momonasmon@gmail.com>2018-06-12 02:26:28 +0300 committerMaxim Monastirsky <momonasmon@gmail.com>2018-06-14 00:46:36 +0200 commitc3e552ac25be001a623469c549ee8d0719b98133 (patch) tree624f73b7e15e93af22066a72917621ed9eefd69d parent2bfc4cefc21ab18e9ff7cc5fdc743bcc856d103c (diff)
wayland: Make popup menus not show off-screen
Comment 7 Dieter 2021-01-25 11:37:02 UTC
Still present in

Version: 7.0.4.2 (x64)
Build ID: dcf040e67528d9187c66b2379df5ea4407429775
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL
Comment 8 Maxim Monastirsky 2021-01-27 18:45:52 UTC
https://gerrit.libreoffice.org/c/core/+/110029 seems to fix the problem under gen.
Comment 9 Commit Notification 2021-01-28 09:41:32 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/46984619f8b7fa30678b5c7ccd40a0d727a57ce5

tdf#122714 Avoid tracking mode for a toolbar's title menu button

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Dieter 2021-02-20 16:19:32 UTC
VERIFIED with

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 28555fc345ac2ccdda0e4e0f3c812c646befe68b
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

Maxim, thanks for fixing it!