tdf#122714 Avoid tracking mode for a toolbar's title menu button

Regression of commit c3e552ac25be001a623469c549ee8d0719b98133
("wayland: Make popup menus not show off-screen"). Apparently
executing the menu async used to give the tracking mode a chance
to be turned off.

Avoid the problem by not activating that mode in the first place.
And because the Tracking method will no longer be executed, we
also need to reset the "pressed" state here instead.

Change-Id: Iab63f1eaada1f4945507d6bdd05dc6171e6afbab
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/110029
Tested-by: Jenkins
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>